# javier.ie

./: .env  .env.example  .gitignore  Cargo.toml  README.md  Rocket.toml  index.html  nixpacks.toml  package-lock.json  package.json
astro_site/: astro.config.mjs  package-lock.json  package.json
astro_site/src/components/: Link.astro  Nav.astro
astro_site/src/layouts/: Layout.astro
astro_site/src/pages/: contact.astro  index.astro
migrations/: 20240427141342_init.down.sql  20240427141342_init.up.sql  20240427194654_sessions.up.sql
src/: App.svelte  app.css  db.rs  mail_util.rs  main.rs  structs.rs
src/app/: globals.css  layout.tsx
src/app/contact/: page.tsx
src/app/skills/: page.tsx
src/app/studies/: page.tsx
src/components/: MenuItem.tsx  MenuToggle.tsx  Navbar.tsx  Page.tsx
src/lib/: CatShove.svelte  NavBar.svelte  Separator.svelte  Wave.svelte
src/routes/: email.rs  index.rs  login.rs  mod.rs  verify.rs
static/: index.html  settings.json
static/_astro/: contact.B-ncumfH.css  contact.DeRGQUe3.css  hoisted.BkYHuGqj.js  hoisted.C8dBL6V-.js  hoisted.CyxyeAtZ.js  hoisted.byTTdar9.js
static/contact/: index.html
templates/: index.html.tera
