[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.4"
rocket = {version = "0.5.0", features = ["json"]}
rocket_db_pools = { version = "0.1.0", features = ["sqlx_postgres"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
sqlx = { version = "0.7.4", default-features = false, features = ["macros", "migrate", "time", "uuid"] }


